objects/TracHier__Domain_Instance__c.object
<CustomObject>
    <fields>
        <fullName>TracHier__Complete_Company__c</fullName>
        <label>Complete Company</label>
        <referenceTo>TracHier__Master_Account__c</referenceTo>
        <relationshipLabel>Domain Instances</relationshipLabel>
        <relationshipName>Domain_Instances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TracHier__Domain__c</fullName>
        <label>Domain</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TracHier__Instance_Identifier__c</fullName>
        <description>Unique identifier of this instance of a domain</description>
        <externalId>true</externalId>
        <label>Instance Identifier</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Domain Instance</label>
    <nameField>
        <label>Domain Instance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Domain Instances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>